--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,10 +18,16 @@
 
 <body>
     <header>
-        <a href="../index.html" class="flex">
-            <img src="../images/dog.png" alt="outline of a dog's face with heart above it">
-            <h1>Delilah's Doggy Daycare</h1>
-        </a>
+        <section class="nav-bar flex">
+            <a href="index.html" class="nav-item flex">
+                <img src="../images/dog.png" alt="outline of a dog's face with heart above it">
+                <h1>Delilah's Doggy Daycare</h1>
+            </a>
+            <div class="nav-item flex">
+                <a href="booking.html" class="large-text">Booking Rates</a>
+                <a href="contact.html" class="large-text">Contact Us</a>
+            </div>
+        </section>
         <!-- TODO Implement a nav -->
     </header>
     <main class="contact" id="contact-page">
