--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <section class="nav-bar flex">
-            <a href="index.html" class="nav-item flex">
+            <a href="../index.html" class="nav-item flex">
                 <img src="../images/dog.png" alt="outline of a dog's face with heart above it">
                 <h1>Delilah's Doggy Daycare</h1>
             </a>
@@ -45,7 +45,7 @@
                 <label for="user-message">Your message:</label>
                 <textarea id="user-message"></textarea>
             </div>
-            <button class="fake-button blue-hover" type="submit" id="submit-button">Good dog!</button>
+            <button class="fake-button blue-hover pre-submit" type="submit" id="submit-button">Good dog!</button>
         </form>
     </main>
     <footer>
